# rolldown

./: CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml  justfile  knip.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/rollipop-integration/: SKILL.md
.agents/skills/upstream-sync/: SKILL.md
.github/workflows/: auto-assign-pr.yml  autofix.yml  automation-labeled.yml  benchmark-node.yml  benchmark-rust.yml  cache-warmup.yml  ci.yml  copilot-setup-steps.yml  deny.yml  metric.yml  prepare-release.yml  publish-to-npm.yml  publish-to-pkg.pr.new.yml  release-crates.yml  reusable-cargo-test.yml  reusable-native-build.yml  reusable-node-dev-server-test.yml  reusable-node-test.yml  reusable-release-build.yml  reusable-wasi.yml  security.yml  update-test-dependencies.yml
crates/bench/src/: lib.rs
crates/rolldown/: Cargo.toml
crates/rolldown/src/: lib.rs
crates/rolldown/src/ecmascript/: ecma_generator.rs
crates/rolldown/src/ecmascript/format/: mod.rs  rollipop.rs
crates/rolldown/src/module_finalizers/: mod.rs  rollipop.rs
crates/rolldown/src/rollipop/: mod.rs
crates/rolldown/src/runtime/: rollipop-runtime.js
crates/rolldown/src/stages/generate_stage/: finalize_rollipop_modules.rs  mod.rs  render_chunk_to_assets.rs
crates/rolldown/src/stages/link_stage/: create_exports_for_ecma_modules.rs  cross_module_optimization.rs  mod.rs
crates/rolldown/src/utils/: pre_process_ecma_ast.rs  prepare_build_context.rs  renamer.rs
crates/rolldown_binding/: Cargo.toml
crates/rolldown_binding/src/: lib.rs  rollipop_react_native_transform.rs
crates/rolldown_binding/src/options/: binding_transform_options.rs  mod.rs  oxc_react_compiler_options.rs
crates/rolldown_binding/src/types/: binding_normalized_options.rs
crates/rolldown_binding/src/utils/: mod.rs  normalize_binding_options.rs  normalize_binding_transform_options.rs
crates/rolldown_common/: Cargo.toml
crates/rolldown_common/src/: lib.rs
crates/rolldown_common/src/inner_bundler_options/: mod.rs
crates/rolldown_common/src/utils/: enhanced_transform.rs
crates/rolldown_dev/: Cargo.toml
crates/rolldown_dev_common/: Cargo.toml
crates/rolldown_devtools/: Cargo.toml
crates/rolldown_devtools_action/: Cargo.toml
crates/rolldown_devtools_action/src/definitions/: chunk_graph_ready.rs
crates/rolldown_ecmascript/: Cargo.toml
crates/rolldown_ecmascript_utils/: Cargo.toml
crates/rolldown_error/: Cargo.toml
crates/rolldown_fs/: Cargo.toml
crates/rolldown_fs_watcher/: Cargo.toml
crates/rolldown_plugin/: Cargo.toml
crates/rolldown_plugin/src/: lib.rs  plugin.rs  pluginable.rs
crates/rolldown_plugin/src/plugin_context/: plugin_context_meta.rs
crates/rolldown_plugin/src/plugin_driver/: build_hooks.rs  hook_orders.rs  mod.rs  plugin_driver_factory.rs
crates/rolldown_plugin/src/types/: mod.rs  transform_cache.rs  transform_cache_manager.rs
crates/rolldown_plugin_asset_module/: Cargo.toml
crates/rolldown_plugin_bundle_analyzer/: Cargo.toml
crates/rolldown_plugin_chunk_import_map/: Cargo.toml
crates/rolldown_plugin_copy_module/: Cargo.toml
crates/rolldown_plugin_data_url/: Cargo.toml  README.md
crates/rolldown_plugin_esm_external_require/: Cargo.toml
crates/rolldown_plugin_hmr/: Cargo.toml
crates/rolldown_plugin_hmr/src/runtime/: README.md  runtime-extra-dev-common-origin.js  runtime-extra-dev-common.js
crates/rolldown_plugin_isolated_declaration/: Cargo.toml
crates/rolldown_plugin_lazy_compilation/: Cargo.toml
crates/rolldown_plugin_oxc_runtime/: Cargo.toml
crates/rolldown_plugin_replace/: Cargo.toml
crates/rolldown_plugin_rollipop_react_native/: Cargo.toml
crates/rolldown_plugin_rollipop_react_native/src/: flow.rs  lib.rs
crates/rolldown_plugin_rollipop_react_refresh_wrapper/: Cargo.toml
crates/rolldown_plugin_rollipop_react_refresh_wrapper/src/: lib.rs
crates/rolldown_plugin_rollipop_react_refresh_wrapper/tests/: sourcemap.rs
crates/rolldown_plugin_rollipop_worklets/: Cargo.toml
crates/rolldown_plugin_rollipop_worklets/src/: lib.rs
crates/rolldown_plugin_utils/: Cargo.toml
crates/rolldown_plugin_utils/src/: to_relative_runtime_path.rs
crates/rolldown_plugin_vite_css_post/src/: utils.rs
crates/rolldown_plugin_vite_json/: README.md
crates/rolldown_plugin_vite_load_fallback/: README.md
crates/rolldown_plugin_vite_manifest/: README.md
crates/rolldown_plugin_vite_module_preload_polyfill/: README.md
crates/rolldown_plugin_vite_resolve/: Cargo.toml
crates/rolldown_plugin_vite_transform/src/: utils.rs
crates/rolldown_resolver/: Cargo.toml
crates/rolldown_sourcemap/: Cargo.toml
crates/rolldown_std_utils/: Cargo.toml
crates/rolldown_testing/: _config.schema.json
crates/rolldown_testing/src/: integration_test.rs
crates/rolldown_tracing/: Cargo.toml
crates/rolldown_utils/: Cargo.toml
crates/rolldown_watcher/: Cargo.toml
crates/rolldown_workspace/: Cargo.toml
crates/rollipop_react_native_transform/: Cargo.toml
crates/rollipop_react_native_transform/src/: flow.rs  lib.rs  wasm_plugins.rs
crates/rollipop_react_native_transform/src/visitors/: mod.rs  remove_flow_type_only_fields.rs  template_literal_caching.rs
crates/rollipop_react_native_transform/tests/: async_generator.rs  commonjs.rs  globals.rs  hermes.rs  hermes_v1.rs
crates/string_wizard/: Cargo.toml
docs/apis/: bundler-api.md  cli.md  plugin-api.md
docs/apis/plugin-api/: hook-filters.md
docs/builtin-plugins/: bundle-analyzer.md  esm-external-require.md  replace.md
docs/development-guide/: building-and-running.md
docs/guide/: getting-started.md  troubleshooting.md
docs/in-depth/: directives.md  native-magic-string.md  non-esm-output-formats.md  why-plugin-hook-filter.md
examples/bundle-analyzer-demo/: README.md  package.json  rolldown.config.js
examples/lazy-compilation/: package.json
examples/watch/: package.json  rolldown.config.js
tasks/generator/src/generators/: hook_usage.rs
(+69 files in other folders)
