[package]
name = "rolldown_plugin_rollipop_react_native"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for React Native — thin adapter over rollipop_react_native_transform"

[lib]
doctest = false
test = false

[lints]
workspace = true

[features]
default = ["wasm_plugins"]
# Propagates to `rollipop_react_native_transform`. Disable on targets where
# wasmer cannot compile (e.g. `aarch64-pc-windows-msvc`).
wasm_plugins = ["rollipop_react_native_transform/wasm_plugins"]

[dependencies]
anyhow = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_sourcemap = { workspace = true }
rollipop_react_native_transform = { workspace = true, default-features = false }
