[package]
name = "rolldown_plugin_rollipop_react_refresh_wrapper"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for Rollipop React Refresh wrapper"

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
arcstr = { workspace = true }
memchr = { workspace = true }
oxc = { workspace = true }
regex = { workspace = true }
rolldown_error = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_plugin_utils = { workspace = true }
rolldown_sourcemap = { workspace = true }
rolldown_utils = { workspace = true }
string_wizard = { workspace = true }
