[package]
name = "rolldown_plugin_rollipop_worklets"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for React Native Reanimated worklets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
oxc = { workspace = true }
oxc_react_native_worklets = { version = "0.1.1" }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
